Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void DrowBall(Ball*)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:103:6: warning: no previous declaration for 'void DrowBall(Ball*)' [-Wmissing-declarations]
 void DrowBall(Ball* ball)
      ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:1:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:105:24: error: request for member 'Color' in 'ball', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     txSetColor ((ball .Color), 2);
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:106:27: error: request for member 'FillColor' in 'ball', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     txSetFillColor (ball .FillColor);
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:108:21: error: request for member 'x' in 'ball', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     txCircle (ball .x, ball .y, ball .r);
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:108:30: error: request for member 'y' in 'ball', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     txCircle (ball .x, ball .y, ball .r);
                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:108:39: error: request for member 'r' in 'ball', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     txCircle (ball .x, ball .y, ball .r);
                                       ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: At global scope:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:115:29: error: expected initializer before ')' token
 void ControlBall(Ball *ball))
                             ^
---------------------------------------------------------------------------------------------
[11.06.2021 10:33:37,30 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
